--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -348,14 +348,183 @@ ul li a:hover + .hidden, .hidden:hover {
 /* .login-btn{
   display: block;
 } */
-/*Responsive Styles*/
+
+
+.login-btn{
+  display: inline-flex !important;
+} 
+.login-btn li{
+  margin: 10px;
+}
+
+.login-btn a{
+  display: block;
+    min-width: 86px !important;
+    height: 36px !important;
+    text-align: center !important;
+    line-height: 38px !important;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+    background-color: white!important;
+    color: #19578a !important;
+    border-radius: 25px;
+    text-decoration: none !important;
+    font-weight: 800 !important;
+}
+
+.login-btn li:hover a{
+  background-color: white!important;
+  color: #19578a !important; 
+  border-radius: 25px;
+}
+.custom-ss-footer {
+  background: #7d7d7d;
+  padding: 25px;
+  background-size: cover;
+}
+
+.custom-ss-footer  img{ 
+ width: 150px;
+ height:auto;
+}
+
+.custom-ss-footer li,h3,p{
+  color: white !important;
+}
+.phone {
+  display: none;
+}
+
+
+.phone a {
+  text-decoration: none;
+  color: #1E1E23;
+  opacity:1;
+  font-family: 'work sans', sans serif;
+  font-size: 1.4em;
+  font-weight: 400;
+  transition: 200ms;
+  text-transform: uppercase;
+}
+.phone a:hover {
+  opacity:0.5;
+}
+.phone ul {
+  padding: 0;
+  list-style-type: none;
+}
+
+.phone nav {
+    background-color: #1E1E23;
+    height: 55px;
+    width: 70px;
+    border-radius: 5px;
+}
+
+
+.phone #menuToggle {
+  display: flex;
+  flex-direction: column;
+  position: relative; 
+  top: 20px;
+  left: 20px;
+  z-index: 1;
+  -webkit-user-select: none;
+  user-select: none;
+}
+
+.phone #menuToggle input
+{
+  display: flex;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 2;
+}
+
+.phone #menuToggle span
+{
+  display: flex;
+  width: 29px;
+  height: 2px;
+  margin-bottom: 5px;
+  position: relative;
+  background: #ffffff;
+  border-radius: 3px;
+  z-index: 1;
+  transform-origin: 5px 0px;
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
+}
+
+.phone #menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
+}
+
+.phone #menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
+}
+
+.phone #menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-3px, -1px);
+  background: #36383F;
+}
+.phone #menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+.phone #menuToggle input:checked ~ span:nth-last-child(2)
+{
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+.phone #menu
+{
+  position: absolute;
+  width: 300px;
+  height: auto;
+  box-shadow: 0 0 10px #85888C;
+  margin: -50px 0 0 -50px;
+  padding: 50px;
+  padding-top: 95px;
+  background-color: #F5F6FA;
+  -webkit-font-smoothing: antialiased;
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.phone #menu li
+{
+  padding: 10px 0;
+  transition-delay: 2s;
+}
+
+.phone #menuToggle input:checked ~ ul
+{
+  transform: none;
+}
+
+
+/*********************************************************************************************************************************************************************************
+************************************************************Responsive Styles*****************************************************************************************/
 @media screen and (max-width : 760px){
   /*Make dropdown links appear inline*/
   ul {
       position: static;
       display: none;
   }
-
+  .phone {
+    display: block;
+}
   .get-strt-sub{
     width: 50%;
   }
@@ -367,11 +536,7 @@ ul li a:hover + .hidden, .hidden:hover {
     position: absolute;
     left: 179px;
    
-  }
-
-  .login-btn{
-    display: none !important;
-  }
+  }  
 
   .showInMobile{
     display: block !important;
@@ -396,6 +561,16 @@ ul li a:hover + .hidden, .hidden:hover {
 
 /************mediaquaries*******/
 @media screen and (min-width: 320px) and (max-width: 567px) {
+  .phone {
+    display: block;
+   
+}
+.phone ul#menu{
+  -webkit-animation-duration:.5s;
+  animation-duration: .5s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
   h1.custom-heading{
       font-size: 40px;
   }  
@@ -404,7 +579,12 @@ ul li a:hover + .hidden, .hidden:hover {
   position: absolute;
 }
 ul.main-menu li{
-  background: #2661bd;
+  background: #000000bf;
+    margin-bottom: 2px;
+}
+.main-menu li:hover a, .main-menu li:active a, .main-menu li:hover .main-header {
+  border-radius: 0;
+  border: 0;
 }
 .custom-ss{
   font-size: 20px;
@@ -423,10 +603,14 @@ ul.main-menu li{
 .img-lft img{
   width:100%;
 }
-}
+
+
+/* .login-btn{
+  display: inline-flex !important;
+} */
 
 .login-btn{
-  display: inline-flex !important;
+  display: none !important;
 }
 
 .login-btn li{
@@ -452,22 +636,8 @@ ul.main-menu li{
   background-color: white!important;
   color: #19578a !important; 
   border-radius: 25px;
- 
-
-}
-.custom-ss-footer {
-  background: #7d7d7d;
-  padding: 25px;
-  background-size: cover;
 }
 
-.custom-ss-footer  img{
- height: 150px;
- width: 150px;
-}
-
-.custom-ss-footer li,h3,p{
-  color: white !important;
 }
 @media screen and (min-width: 360px) and (max-width: 539px) {
 
