--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -83,35 +83,35 @@
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showTechTalk">
-                        <p> Want to connect with experts & Talk on Technology !! <br />
+                        <p> Want to connect with experts &amp; Talk on Technology !! <br />
                             <br />
                             A Platform to interchange your views on technology <br />
 
                         </p>
-                        <button class="custom-ss-quick-register-block-button">Register & Connect & Talk </button>
+                        <button class="custom-ss-quick-register-block-button">Register &amp; Connect &amp; Talk </button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showAcadamicProz">
                         <p>
-                            An initiative platform to express & excute your brilliant idea with help of co-students ,
+                            An initiative platform to express &amp; excute your brilliant idea with help of co-students ,
                             Academicians
-                            , Industrial Experts & Sponsors support <br />
+                            , Industrial Experts &amp; Sponsors support <br />
                             <br />
                             register your academic project or Innovation
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register & Execute</button>
+                        <button class="custom-ss-quick-register-block-button"> Register &amp; Execute</button>
                     </div>
 
 
                     <div class="col-md-6 col-sm-6" *ngIf="showStuation">
                         <p>
-                            An initiative platform to express & excute your brilliant idea with help of co-students ,
+                            An initiative platform to express &amp; excute your brilliant idea with help of co-students ,
                             Academicians
-                            , Industrial Experts & Sponsors support<br />
+                            , Industrial Experts &amp; Sponsors support<br />
 
                             register your academic project or Innovation
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register & Execute</button>
+                        <button class="custom-ss-quick-register-block-button"> Register &amp; Execute</button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showProzMe">
@@ -121,16 +121,16 @@
                             <br />
                             You had enough potential !! Lets start work !!
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Apply & Work</button>
+                        <button class="custom-ss-quick-register-block-button"> Apply &amp; Work</button>
                     </div>
 
                     <div class="col-md-6 col-sm-6" *ngIf="showEngship">
-                        <p> Are you looking for guidance , encouragement & support from trusted experience professional
+                        <p> Are you looking for guidance , encouragement &amp; support from trusted experience professional
                             ?<br />
                             <br />
-                            A Platform to connect Mentor & Mentee
+                            A Platform to connect Mentor &amp; Mentee
                         </p>
-                        <button class="custom-ss-quick-register-block-button"> Register & Connect</button>
+                        <button class="custom-ss-quick-register-block-button"> Register &amp; Connect</button>
                     </div>
 
 
